aggregator committee: exporter
